# shopstream_dbx

./: .gitignore  readme.md
shopstream_dbx/: README.md  all-vpcs.json  databricks.yml  pyproject.toml
shopstream_dbx/resources/: sample_job.job.yml  shopstream_dbx_etl.pipeline.yml
shopstream_dbx/src/: sample_notebook.ipynb
shopstream_dbx/src/shopstream_dbx/: main.py
shopstream_dbx/src/shopstream_dbx_etl/: README.md
shopstream_dbx/src/shopstream_dbx_etl/transformations/: sample_trips_shopstream_dbx.py  sample_zones_shopstream_dbx.py
shopstream_dbx/tests/: sample_taxis_test.py
terraform_shopstream/: .gitignore  .terraform.lock.hcl  catalogs.tf  main.tf  me.tf  repomix-output.xml  schemas.tf  variables.tf  volumes.tf
