[project]
name = "shopstream_dbx"
version = "0.0.1"
authors = [{ name = "robertjustinianpeng@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "polars>=1.36.1",
]

[dependency-groups]
dev = [
    "pytest",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
]

[project.scripts]
main = "shopstream_dbx.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 125
